--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,6 +2,9 @@
 
 @theme {
   --font-family-sans: "Inter", sans-serif;
+
+  /* COLORS */
+  --color-primary: #2563eb; /* blue-600 */
 }
 
 @layer base {
