--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,9 +1,7 @@
-@import url("https://fonts.googleapis.com/css2?family=Anton&display=swap");
-
 @import "tailwindcss";
 
 @theme {
-  --font-anton: "Anton", sans-serif;
+  /* --font-anton: "Anton", sans-serif; */
 
   /* COLORS */
   --color-early-dawn: #fffbe5;
@@ -19,10 +17,10 @@
     font-size: 16px;
     scroll-behavior: smooth;
     background-color: var(--color-early-dawn);
+    letter-spacing: 0.025em;
   }
 
   body {
-    font-family: var(--font-anton);
     color: var(--color-toledo);
   }
 
@@ -34,6 +32,7 @@
   h6 {
     font-family: var(--font-oswald);
     font-weight: 700;
+    letter-spacing: 0.025em;
   }
 
   button,
